adiciona testes unitários para as classes das anotações